style: Modified CSS for buttons(fixed alignment)

--- a/sharespace/styles.css
+++ b/sharespace/styles.css
@@ -80,4 +80,5 @@ button{
   padding: 10px 15px;
   font-weight: 700;
   cursor: pointer;
+  align-self: center;
 }
